syntax = "proto3";

package user;

message UserRegistered {
    string username  = 1;
    string first_name = 2;
    string last_name  = 3;
}
